--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 						<p> contact info
 						</p>
 					</div>
-					<div id="banner"> <!-- All banner text will normally be hidden with styles -->
+					<div> 
 						<h1 id="name">Anjun Gu</h1>
-						<h2><a href="mailto:anjungu@gmail.com" target="_blank"><img src="images/email.png" alt="linkedIn" style="width:30px; height:30px"></a></h2>
-						<h2><a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="images/linkedIn.png" alt="linkedIn" style="width:30px; height:30px"></a></h2>
+						<h2><a href="mailto:anjungu@gmail.com" target="_blank"><img src="anjungu.github.io/images/email.png" alt="linkedIn" style="width:30px; height:30px"></a></h2>
+						<h2><a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="anjungu.github.io/images/linkedIn.png" alt="linkedIn" style="width:30px; height:30px"></a></h2>
 					</div>
 				</section>
 			</div>
