--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
 			<!-- End Tab List -->
 			<div id="tab-data-wrap">
 				<section>
+					<div> 
+						<h2>Contact Information</h2>
+					</div>
+				</section>	
+				<section>
 					<div>
-						<p> contact info
+						<p> 
+							<h2 id="name">Anjun Gu</h2>
+							<h2><a href="mailto:anjungu@gmail.com" target="_blank"><img src="https://anjungu.github.io/images/email.png" alt="linkedIn" style="width:50px; height:50px"></a></h2>
+							<h2><a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="https://anjungu.github.io/images/LinkedIn.png" alt="linkedIn" style="width:50px; height:50px"></a></h2>
 						</p>
 					</div>
-					<div> 
-						<h1 id="name">Anjun Gu</h1>
-						<h2><a href="mailto:anjungu@gmail.com" target="_blank"><img src="https://anjungu.github.io/images/email.png" alt="linkedIn" style="width:30px; height:30px"></a></h2>
-						<h2><a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="https://anjungu.github.io/images/linkedIn.png" alt="linkedIn" style="width:30px; height:30px"></a></h2>
-					</div>
+
 				</section>
 			</div>
 		</div>
