--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section>
 					<div>
 						<p> 
-							<h3 id="name">Anjun Gu</h2>
+							<!--<h3 id="name">Anjun Gu</h2>-->
 							<h3><a href="mailto:anjungu@gmail.com" target="_blank"><img src="https://anjungu.github.io/images/email.png" alt="linkedIn" style="width:50px; height:50px"></a></h3>
 							<h3><a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="https://anjungu.github.io/images/LinkedIn.png" alt="linkedIn" style="width:50px; height:50px"></a></h3>
 						</p>
