--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div id="tab-data-wrap">
 				<section>
 					<div> 
-						<h2>Contact Information</h2>
+						<h3>Contact Information</h3>
 					</div>
 				</section>	
 				<section>
@@ -50,8 +50,10 @@
 			</div>
 		</div>
 	</body>
-	<footer>
-		<p>Last Updated April 30th, 2017</p>
-		<!--<p><a href="xxxx">Website sponsor: xxx</a></p>-->
-	</footer>
+	<div class="main wrapper clearfix">
+		<footer>
+			<p>Last Updated April 30th, 2017</p>
+			<!--<p><a href="xxxx">Website sponsor: xxx</a></p>-->
+		</footer>
+	</div>
 </html>
