--- a/index.html
+++ b/index.html
@@ -24,12 +24,40 @@
 			<!-- Header End -->
 			<!-- Tab List -->
 			<ul class='etabs'>
-				<li class="tab"> <a href="https://anjungu.github.io/">About Me</a></li>
-				<li class="tab"> <a href="https://anjungu.github.io/AcaExp">Academic Experience</a></li>
-				<li class="tab"> <a href="https://anjungu.github.io/WorkExp">Work Experience</a></li>
-				<li class="tab"> <a href="https://anjungu.github.io/Publications">Publications</a></li>
-				<li class='tab'> <a href="https://anjungu.github.io/pdf/AnjunGuResumeOverall(Multi-Pages).pdf">CV</a></li>
-				<li class='tab'> <a href="https://anjungu.github.io/Contact">Contact</a></li>
+				<div class="dropdown">
+					<li class="tab"><a class="dropdown" href="https://anjungu.github.io/">About Me</a></li>
+				  <div class="dropdown-content">
+				    <a href="https://anjungu.github.io/#News">News</a>
+				    <a href="https://anjungu.github.io/#Background">Background</a>
+				    <a href="https://anjungu.github.io/#Interest">Interest</a>
+						<a href="https://anjungu.github.io/#Skills">Skills</a>
+				  </div>
+				</div>
+				<div class="dropdown">
+					<li class="tab"><a class="dropdown" href="https://anjungu.github.io/AcaExp">Academic Experience</a></li>
+				  <div class="dropdown-content">
+				    <a href="https://anjungu.github.io/AcaExp/#Education">Education</a>
+				    <a href="https://anjungu.github.io/AcaExp/#Research">Research</a>
+				    <a href="https://anjungu.github.io/AcaExp/#Projects">Projects</a>
+						<a href="https://anjungu.github.io/AcaExp/#Honors">Honors</a>
+				  </div>
+				</div>
+				<div class="dropdown">
+					<li class="tab"><a class="dropdown" href="https://anjungu.github.io/WorkExp">Work Experience</a></li>
+				</div>
+				<div class="dropdown">
+					<li class="tab"><a class="dropdown" href="https://anjungu.github.io/Publications">Publications</a></li>
+				  <div class="dropdown-content">
+				    <a href="https://anjungu.github.io/Publications/#Conference">Conference</a>
+				    <a href="https://anjungu.github.io/Publications/#Journal">Journal</a>
+				  </div>
+				</div>
+				<div class="dropdown">
+					<li class="tab"><a class="dropdown" href="https://anjungu.github.io/pdf/AnjunGuResumeOverall(Multi-Pages).pdf">CV</a></li>
+				</div>
+				<div class="dropdown">
+					<li class="tab"><a class="dropdown" href="https://anjungu.github.io/Contact">Contact</a></li>
+				</div>
 			</ul>
 			<!-- End Tab List -->
 			<div id="tab-data-wrap">
