--- a/index.html
+++ b/index.html
@@ -62,21 +62,23 @@
 			<!-- End Tab List -->
 			<div id="tab-data-wrap">
 				<section>
-					<div> 
-						<h3>Contact Information</h3>
-					</div>
-				</section>	
-				<section>
 					<div>
-						<p> 
-							<!--<h3 id="name">Anjun Gu</h2>-->
-							<h3><a href="mailto:anjungu@gmail.com" target="_blank"><img src="https://anjungu.github.io/images/email.png" alt="linkedIn" style="width:50px; height:50px"></a></h3>
-							<h3><a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="https://anjungu.github.io/images/LinkedIn.png" alt="linkedIn" style="width:50px; height:50px"></a></h3>
-						</p>
+						<ul class="no-list experience">
+							<h3 id ="Contact">Contact Information</h3>
+							<ul class="no-list experience">
+								<li>
+									<p> 
+										<!--<h3 id="name">Anjun Gu</h2>-->
+										<a href="mailto:anjungu@gmail.com" target="_blank"><img src="https://anjungu.github.io/images/email.png" alt="gmail" style="width:50px; height:50px"></a>
+										<a href="https://www.linkedin.com/in/anjun-gu-26181364/" target="_blank"><img src="https://anjungu.github.io/images/LinkedIn.png" alt="linkedIn" style="width:50px; height:50px"></a>
+									</p>
+								</li>
+							</ul>
+						</ul>
 					</div>
-
 				</section>
 			</div>
+			
 		</div>
 	</body>
 	<div class="main wrapper clearfix">
